--- a/style.css
+++ b/style.css
@@ -1,30 +1,129 @@
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    background-color: #f1f1f1;
-    height: 100%; 
-    position: fixed; 
-    overflow: auto; 
-  }
-  .topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  height: 100%;
+  overflow: auto;
+}
+td {
+  border: none;
+}
+#sortable {
+  display: inline-block;
+  text-align: left;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 650px;
+  width: 1000px;
+  margin-top: 1em;
+}
+#sortable li {
+  margin:  0;
+  padding: 1px;
+  float: right;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+}
+body {
+  background-color:#FFCC00
+}
+li span {
+  position: absolute;
+  margin-left: -1.3em;
+}
+.lionPuzzle {
+  width: 150px;
+  height: 150px;
+}
+
+.topnav {
+  background-color: #003399;
+  overflow: hidden;
+  justify-content: center;
+  width: 100%;
+  z-index: 1;
+}
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 10px 30px;
+  text-decoration: none;
+  font-size: 25px;
+  width: 45%;
+}
+.topnav a:hover {
+  background-color: none;
+  color: #FFCC00;
+}
+
+body {
+  font-family: Arial;
+  color: white;
+}
+
+.split {
+  height: 100%;
+  width: 50%;
+  position:fixed;
+  z-index: -1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+  margin-top: 1em;
+}
+
+.left {
+  left: 0;
+  background-color: inherit;
+}
+
+.right {
+  right: 0;
+  background-color: inherit;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 700px;
+  border-radius: 10%;
+  height: 600px;
+}
+.centered a , .centered button{
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #FFCC00;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+.centered a:hover {
+  color: #003399;
+}
+#gameMode{
+  text-align: center;
+}
+#lion img ,#peter img{
+  margin-top: 3em;
+  border-radius: 0;
+  height: 650px;
+  width: 1000px;
+}
